# daft-lance

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pr-test-suite.yml
daft_lance/: __init__.py  _lance.py  lance_merge_column.py  lance_scalar_index.py
tests/io/lancedb/: conftest.py  test_fast_path_merge.py  test_lance_multi_base_layout.py
