[project]
name = "daft-lance"
version = "0.3.3"
description = "Lance integration for Daft - compaction, indexing, merge columns, and REST operations"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
  "lance-namespace>=0.6.0",
  "lance-namespace-urllib3-client>=0.6.0",
  "pylance>=6.0.0"
]

[dependency-groups]
dev = [
  "pandas",
  "pytest",
  "pytest-benchmark",
  "daft>=0.7.0",
  "pyarrow-stubs"
]
lint = [
  "ruff==0.15.1",
  "black==26.1.0",
  "isort==7.0.0",
  "mypy==1.19.1"
]

[tool.mypy]
files = ["daft_lance/**/*.py", "tests/**/*.py"]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
